Play ogg and mp3 files. Audio extension taken from Cron.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
  <script type="text/javascript" src="assets/js/crafty.js"></script>
  <script type="text/javascript" src="assets/js/TiledLevelImporter.js"></script>	 
  <script type="text/javascript" src="assets/js/sprites.js"></script>
+ <script type="text/javascript" src="assets/js/audio.js"></script>
+ <script type="text/javascript" src="assets/js/sounds.js"></script> 
  <script type="text/javascript" src="assets/js/effects.js"></script>
  <script type="text/javascript" src="assets/js/npc.js"></script>
  <script type="text/javascript" src="assets/js/player.js"></script>
