Remove scene flow control from npc.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <script type="text/javascript" src="assets/js/levels.js"></script>
  <script type="text/javascript" src="assets/js/game.js"></script>
   <link type="text/css" href="assets/css/style.css" rel="stylesheet" /> 
- <title>Pit of Zombies</title>
+ <title>Pig'N'Zombies</title>
  </head>
  <body>
 	 <div id="cr-stage">
