Added loader.js, performance is faster.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+<script type="text/javascript" src="assets/js/crafty.js"></script>
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
- <script type="text/javascript" src="assets/js/crafty.js"></script>
+ <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+ <script type="text/javascript" src="assets/js/loader.js"></script> 
+  <script type="text/javascript" src="assets/js/audio.js"></script> 
  <script type="text/javascript" src="assets/js/TiledLevelImporter.js"></script>	 
  <script type="text/javascript" src="assets/js/sprites.js"></script>
  <script type="text/javascript" src="assets/js/effects.js"></script>
